1998-10-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (search_logfile): remove declaration

1998-10-15  Mike Grupenhoff <kashmir@munge.com>

	* server-src/amadmin.c (reuse, no-reuse): don't core dump if tape
	label not found

1998-10-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/conffile.h: remove declaration of holdingdisks and 
	num_holdingdisks, declare getconf_holdingdisks().
	* server-src/conffile.c: define getconf_holdingdisks(),
	* server-src/holding.c: use getconf_holdingdisks
	* server-src/find.c: ditto
	* server-src/amcheck.c: ditto
	* server-src/amflush.c: ditto
	* server-src/driver.c ditto

1998-10-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c: remove verbose and force_parameters
	variables.

1998-10-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c: remove declaration of pid.
	* server-src/dumper.c(do_dump): move declaration of runtime, 
	dumptime, compresspid, indexpid and killerr from global to local.

1998-10-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c: remove declaration of total_waiting and
	result_socket.
	* server-src/planner.c(main): move declaration of initial_size from
	global to local.

1998-10-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.h,server-src/driver.c: move declaration
	of big_dumpers, degraded_mode and reserved_space from 
	driverio.h to driver.c

1998-10-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driverio.h (optionstr): remove declaration

1998-10-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in (SAMBA_CLIENT): fix typo

1998-10-14  John R. Jackson  <jrj@purdue.edu>

	* restore-src/amrestore.c (read_file_header): make a couple of error
	messages clearer that they refer to problems with a header rather
	than the image data.

1998-10-13  Alexandre Oliva  <oliva@dcc.unicamp.br>
