@@ -1,5 +1,10 @@
 1998-10-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+	* server-src/amcheck.c (main): move declaration of mailout and 
+	tempfname from global to local.
+
+1998-10-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* server-src/amadmin.c (search_logfile): remove declaration
 
 1998-10-15  Mike Grupenhoff <kashmir@munge.com>
